# jsonlogalert

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  Dockerfile-install  Dockerfile-install.ignore  LICENSE.md  Makefile  README.md  RELEASE.md  default-config.yaml  install.sh  jsonlogalert.code-workspace  jsonlogalert.sh  jsonlogalert.sublime-project  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: release.yml
contrib-config.d/caddy-access/: drop.yaml  email.jinja-html  service.yaml  source.yaml  source_parser.py
contrib-config.d/exim/: drop.yaml  email.jinja-html  service.yaml  source.yaml  source_parser.py
contrib-config.d/systemd-journal/: email-with-vars.jinja-html  email.jinja-html  source.yaml
contrib-config.d/systemd-journal/10-cloudflared/: email.jinja-html  select.yaml  service.yaml
contrib-config.d/systemd-journal/10-podman/: select.yaml  service.yaml
contrib-config.d/systemd-journal/98-systemd/: select.yaml
contrib-config.d/systemd-journal/99-catchall/: service.yaml
default-config.d/systemd-journal/: email.jinja-html  source.yaml
default-config.d/systemd-journal/98-systemd/: select.yaml  service.yaml
logtail-journal/: README.md  logtail-journal.sh
logtail-logcheck/: README.md  logtail2
makeinstallsh/: install_head.sh  install_main.sh  make.sh
man/: jsonlogalert.1
src/jsonlogalert/: __init__.py  __main__.py  confcheck.py  exceptions.py  jinjaenvironment.py  logalertoutput.py  logalertoutput_file.py  logalertoutput_smtp.py  logentry.py  logfieldrule.py  logservice.py  logsource.py  logsource_file.py  logsource_journal.py  logsourceparser.py  utils.py
systemd/: jsonlogalert.service  jsonlogalert.timer
